--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .hcj-container {
-    background-image: url('imb10.jpg');
+    background-image: url('/imb10.jpg');
     background-position: center;
     background-size: cover;
     /* scales image */
